Add CI/CD Pipeline Testing message to index.html

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 			<p class="hero-text__description">
 				Find the best travel plans tailored to your needs
 			</p>
+			<p>This is CI/CD Pipeline Testing...!</p>
 			<a href="#" class="hero-text__cta">Explore</a>
 		</div>
 	</div>
