Add 'Contact' link to navigation menu

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 				<li>
 					<a href="#gallery" class="navbar-list__link">Gallery</a>
 				</li>
+				<li>
+					<a href="#contact" class="navbar-list__link">Contact</a>
+				</li>
 			</ul>
 			<ul class="navbar-icons">
 				<li>
