Correct spelling of 'Hello' in hero title

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	<div class="hero">
 		<video src="./assets/video/meetMinas.mp4" autoplay muted loop class="hero__video"></video>
 		<div class="hero-text">
-			<h1 class="hero-text__title">Wanderways <br> <span class="hero-text__title--line-2">Discover Your Next Adventure</span></h1>
+			<h1 class="hero-text__title">Heello <br> <span class="hero-text__title--line-2">Discover Your Next Adventure</span></h1>
 			<p class="hero-text__description">
 				Find the best travel plans tailored to your needs
 			</p>
