Update hero text description in index.html

--- a/index.html
+++ b/index.html
@@ -81,9 +81,11 @@
 		<div class="hero-text">
 			<h1 class="hero-text__title">Wanderways <br> <span class="hero-text__title--line-2">Discover Your Next Adventure</span></h1>
 			<p class="hero-text__description">
-				Find the best travel plans tailored to your needs
+				Hello My Name is neel.
+				
 			</p>
 			<p>This is CI/CD Pipeline Testing...!</p>
+			
 			<a href="#" class="hero-text__cta">Explore</a>
 		</div>
 	</div>
